Fix word break inconsistency and non-present email in contributing.md

--- a/src/stylus/reseter.styl
+++ b/src/stylus/reseter.styl
@@ -167,6 +167,7 @@ a
   color: rgb(51, 51, 225)
   background-color: transparent
   text-decoration: none
+  word-break: break-word
   &:hover 
     color: rgb(52, 52, 224)
     text-decoration: underline
